# re-pebble-firmware

./: CMakeLists.txt
.github/workflows/: c-cpp.yml
bootrom/: 00_crc.c  00_crc.s  01_dbg.s  02_flash.s  03_iwdg.s  04_pwr.s  05_rcc.s  06_rtc.s  07_spi.s  08_usart.s  09_flash.s  10_gpio.s  11_rtc.s  12_spi.s  13_usart.s  14_ctrings.s  15_core_cm3.s  16_pebble.c  16_pebble.s  17_strings.s  18_pebble.s  CMakeLists.txt  bootrom.ld  constants.s  data.c  main.s  rom.s  startup.s  stm32f2xx.h  stm32f2xx_crc.h  stm32f2xx_dbgmcu.c  string.c
bootrom/gfx/: hex-chars.s  pebble-com-error.s  pebble-logo.s  progress-bar.s  sad-watch.s
libs/stm32f2xx/: CMakeLists.txt
